--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"  />
      <title>Teen Patti Epic (New) Get ₹1500 Sing Up Bonus With Minimum Withdrawal ₹100 | 3Patti Epic</title>
-    <meta name="keyword" content="Teen Patti Epic, Teen Patti Epic Apk Link, Teen Patti Epic APK, Epic Games, Teen Patti Bonus, Epic Teen Patti, Teen Patti APK, teen Patti Epic Link, Teen Patti Epic App, Arcade, Teen Patti Epic Game, Teen Patti Epic App Link, Teen Patti Epic Withdraw, Epic 3Patti App, Teen Patti Epic New Epic App, Teen Patti Epic Withdrawal, Epic teen Patti Game, Teen Patti Epic Apk Download, New Teen Patti Epic, Teen Patti Epic App Download Link, Teen Patti Games app bonus problem,Epic Teen Patti Apk link, Teen Patti Epic Games, Teen Patti Epic link, Teen Patti Epic Apk link Download, Teen Patti Baaz, Teen Patti clan, Teen Patti New App, Epic Slots, New Rummy App, Teen Patti All App, Teen Patti, Epic, teen patti hsrat ">
- <meta name="description" content="Download the Teen Patti Epic App to receive a bonus ranging from ₹100 to ₹500. By installing 3Patti Epic on your mobile device, you can take advantage of high VIP bonuses. Teen Patti Epic APK">
+    <meta name="keyword" content="Teen Patti Epic, Teen Patti Epic Apk Link, Teen Patti Epic APK, Epic Games, Teen Patti Bonus, Epic Teen Patti, Teen Patti APK, teen Patti Epic Link, Teen Patti Epic App, Epic, Teen Patti Epic Game, Teen Patti Epic App Link, Teen Patti Epic Withdraw, Epic 3Patti App, Teen Patti Epic New Epic App, Teen Patti Epic Withdrawal, Epic teen Patti Game, Teen Patti Epic Apk Download, New Teen Patti Epic, Teen Patti Epic App Download Link, Teen Patti Games app bonus problem, Epic Teen Patti Apk link, Teen Patti Epic Games, Teen Patti Epic link, Teen Patti Epic Apk link Download, Teen Patti Master Epic, Gullak Epic, New Teen Patti Epic, New Rummy App, Teen Patti All App, Teen Patti, Epic, Teen Patti Gullak ">
+ <meta name="description" content="Download the Teen Patti Epic App to receive a registration bonus ₹1500. By installing 3Patti Epic on your mobile device, you can take advantage of gullak VIP bonuses. Teen Patti Epic APK">
  <meta name="og:name" content="Teen Patti Epic APK Download" />
  <meta property="og:title" content="Teen Patti Epic APK" />
  <meta property="og:description" content="Download the Teen Patti Epic App to receive a bonus ranging from ₹100 to ₹500. By installing YonoArcade on your mobile device, you can take advantage of high VIP membership. Teen Patti Epic APK" sizes="180x180" href="favicon/apple-touch-icon.html">
@@ -182,11 +182,11 @@
         <div
           style="font-size: 1rem;            font-weight: 700; line-height: 1.5;            text-align: center;          "
         >
-          <a
+          <a href="about_teenpattiepic.html"
             style="color: #f3eccd"
            
             target="_blank"
-            >About Us</a href="about_teenpattiepic.html"
+            >About Us</a 
 >
           &nbsp;&nbsp;&nbsp;&nbsp;
           <a style="color: #f3eccd" target="_blank" href="terms_teenpattiepic.html"
@@ -195,7 +195,7 @@
           &nbsp;&nbsp;&nbsp;&nbsp;
           <a
             style="color: #f3eccd"
-            target="_blank" href="policy_teenpattiepic.html"
+            target="_blank" href="privacy_teenpattiepic.html"
             >Privacy Policy</a
             
 >
