--- a/index.html
+++ b/index.html
@@ -182,30 +182,13 @@
         <div
           style="font-size: 1rem;            font-weight: 700; line-height: 1.5;            text-align: center;          "
         >
-          <a href="about_teenpattiepic.html"
-            style="color: #f3eccd"
-           
-            target="_blank"
-            >About Us</a 
->
+          <a style="color: #f3eccd" target="_blank" href="about_teenpattiepic.html">About Us</a>
           &nbsp;&nbsp;&nbsp;&nbsp;
-          <a style="color: #f3eccd" target="_blank" href="terms_teenpattiepic.html"
-            >Terms</a
->
+          <a style="color: #f3eccd" target="_blank" href="terms_teenpattiepic.html">Terms</a>
           &nbsp;&nbsp;&nbsp;&nbsp;
-          <a
-            style="color: #f3eccd"
-            target="_blank" href="privacy_teenpattiepic.html"
-            >Privacy Policy</a
-            
->
-&nbsp;&nbsp;&nbsp;&nbsp;
-<a
-  style="color: #f3eccd"
-  target="_blank" href="data_teenpattiepic.html"
-  >Data Delation Policy</a
-  
->
+          <a style="color: #f3eccd" target="_blank" href="privacy_teenpattiepic.html">Privacy Policy</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+         <a style="color: #f3eccd" target="_blank" href="data_teenpattiepic.html">Data Delation Policy</a>
         </div>
 
         <br />
