--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WR4R84SJ');</script>
+<!-- End Google Tag Manager -->
       <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -42,6 +49,10 @@
     </script>
   </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR4R84SJ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div title="Teen Patti Epic Identity" style="visibility: hidden;">
     <div class="tttt" style="    display: flex; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 1.3rem; border-bottom: 2px solid red; z-index: 9999; display: block;    ">
       <div class="ttopIcon">
