--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  
 <p>By Downloading This <strong>Teen Patti Epic</strong> APK On Your Mobile, You Can Start Your Earning By playing teen patti and Rummy Games. Click Here To Start Your Journey Into The Fascinating <strong>Epic</strong> Gaming World.</p>
  
-<p><span class="hed1" style="font-size: 19px;color: red"><strong><span style="background-color: rgb(239, 239, 239);">Q.2 : When Come Teen Patti Epic Bonus Lifafa (Bonuis)Code ?</span></strong></span></p>
+<p><span class="hed1" style="font-size: 19px;color: red"><strong><span style="background-color: rgb(239, 239, 239);">Q.2 : When Come Teen Patti Epic Bonus Lifafa (Activity Bonus)Code ?</span></strong></span></p>
  
 <p><strong><span style="font-size: 17px;">Ans.</span></strong> Subscribe Our Telegram Channel</p><br>
 <p><strong>We Send Teen Patti Epic Bonus Daily Lifafa Code's On Our Telegram Channel  </strong></p>
