--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
     <div class="center" alt="Teen Patti Epic Banner">
-      <div class="top" onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/eTQZJyD2.apk?source=game'" />        
+      <div class="top" onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/tAA67jZp.apk?source=game'" />        
       </div>
       <div class="downBtn" onclick="DownSoft()">
-        <img onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/eTQZJyD2.apk?source=game'" src="img/teen-patti-epic-download.webp" alt="Teen Patti Epic Apk Download" />
+        <img onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/tAA67jZp.apk?source=game'" src="img/teen-patti-epic-download.webp" alt="Teen Patti Epic Apk Download" />
       </div>
     <div class="bodylook" alt="Teen Patti Epic FAQS">
 <span><strong class="hed" style="font-size:22px">Frequency Asked Questions (FAQ)</strong></span><br>
@@ -162,7 +162,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  
 <p><strong>Ans</strong>. If You Want To <strong>Download</strong>&nbsp;<strong>Teen Patti Epic APK</strong>, Then You Have To Click On The Download Button, This (epic 3 patti)Application Will Start Downloading autimatic.</p>
 <p>
-         <img onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/eTQZJyD2.apk?source=game'" class="downBtn" src="img/teen-patti-epic-download.webp" style="margin: 0 auto; display: block; width: 261px; height: 62.0055px;" width="261" height="62.0055" alt="Teen Patti Epic APK DOWNLOAD"></p>
+         <img onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/tAA67jZp.apk?source=game'" class="downBtn" src="img/teen-patti-epic-download.webp" style="margin: 0 auto; display: block; width: 261px; height: 62.0055px;" width="261" height="62.0055" alt="Teen Patti Epic APK DOWNLOAD"></p>
 <p>By Clicking On The Download Button Given Above, You Will Be Able To Download The Teen Patti Epic APK Very Easily. </p>
  
 <p><span class="hed1" style="font-size: 20px;color: red"><strong><span style="background-color: rgb(239, 239, 239);">Q.6 : How To Sign-Up In Teen Patti Epic APK?</span></strong></span></p>
@@ -212,7 +212,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span>Teen Patti Epic is owned by Teen Patti Epic PVT LTD</span><br>
           Copyright © 2024 TeeenPattiEpic All Rights Reserved
       <div class="footbtn" alt="Teen Patti Epic Footer">
-        <a onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/eTQZJyD2.apk?source=game'"
+        <a onclick="location.href='https://www.n90.in/cg/down/IN_03_SDK/com.tvkzoszk.vyqnslqw/8888/TeenPatti%20Epic/tAA67jZp.apk?source=game'"
           ><img src="img/teen-patti-epic-footer.webp" alt="Teen Patti Epic Apk"
         /></a>
       </div>
